[package]
name = "primeish"
version = "0.1.0"
description = "A CLI containing various prime number utilities."
edition = "2021"
license = "Apache-2.0"
keywords = ["prime", "cli", "number", "math"]
categories = ["science", "math"]
authors = ["LeoDog896 <leodog896@gmail.com>"]
documentation = "https://github.com/LeoDog896/primeish#readme"
homepage = "https://github.com/LeoDog896/primeish#readme"
repository = "https://github.com/LeoDog896/primeish"

[dependencies]
clap = { version = "4.3.11", features = ["derive"] }
primes = "0.3.0"
